Revert "updates java token example to account for deprecated sun.* package"
This reverts commit df6e09a669b48b7c33536cb6f21414d215e3be80.