@@ -11,7 +11,8 @@
 import java.security.SignatureException;
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import java.util.Base64;
+import sun.misc.BASE64Encoder;
+import sun.misc.BASE64Decoder;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.io.BufferedReader;
@@ -20,6 +21,7 @@ import java.io.InputStreamReader;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.net.URLEncoder;
 
 
 
@@ -34,7 +36,7 @@ public class token {
         String token;
         try {
 
-            byte[] key  = Base64.getDecoder().decode(encodedKey);
+            byte[] key  = new sun.misc.BASE64Decoder().decodeBuffer(encodedKey);
             long number  = System.currentTimeMillis()/(interval*1000);
             byte [] data = unpack64(number);
 
@@ -44,7 +46,7 @@ public class token {
             mac.init(signingKey);
 
             byte[] rawHmac = mac.doFinal(data);
-            token = Base64.getEncoder().encodeToString(rawHmac);
+            token = new BASE64Encoder().encode(rawHmac);
 
         } catch (Exception e) {
             throw new SignatureException("Failed to generate HMAC : " + e.getMessage());
